j--/tests/pass/ExclusiveOr.java
package pass;
public class ExclusiveOr {
	public int exOr(int x, int y) {
		return x ^ y;
	}
}
