j--/tests/fail/ExclusiveOr.java
package fail;
public class ExclusiveOr {
	public static void main(String[] args) {
		System.out.println("keith" ^ "Dylan");
	}
}
